# auth

./: README.md  main.py
auth-backend/: .coveragerc  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  celerybeat-schedule  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  env.example.txt  main.py  nginx.conf  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt
auth-backend/.github/workflows/: backend-tests.yml  security-scan.yml
auth-backend/alembic/: env.py  script.py.mako
auth-backend/alembic/versions/: 20250101_0001_create_client_table.py  20250131_0001_add_advanced_auth_features.py  20251101_0115_964f20d5f591_create_app_user_table.py  20251101_0115_ba7b72823874_create_client_table.py  20251101_0116_625f6b9fbb95_add_advanced_auth_features.py  20251101_1746_add_email_tracking_tables.py  20251101_1816_add_email_ab_testing_tables.py  20251101_1848_add_file_upload_tables.py  20251101_1851_add_multipart_upload_tables.py  20251101_1852_add_user_avatar.py  20251101_1930_add_user_kyc.py  20251101_2324_fc63e2cc8877_initial_schema.py  20251102_0001_add_permissions_table.py  20251102_add_performance_indexes.py  20251103_add_async_tasks_table.py  20251104_initial_schema_consolidated.py  __init__.py  add_composite_indexes.py  partition_audit_logs.sql.example
auth-backend/app/api/dicontainer/: __init__.py  dicontainer.py
auth-backend/app/api/dtos/: __init__.py
auth-backend/app/api/mappers/: __init__.py  client_mapper.py
auth-backend/app/api/middlewares/: __init__.py  api_key_middleware.py  api_versioning.py  audit_middleware.py  auth_middleware.py  exception_handler.py  https_redirect_middleware.py  logging_middleware.py  metrics_middleware.py  rate_limit_middleware.py  security_headers_middleware.py  tenant_middleware.py  upload_rate_limiter.py  websocket_auth.py  workspace_middleware.py
auth-backend/app/api/routes/: __init__.py  api_key_routes.py  audit_routes.py  auth_routes.py  chunked_upload_routes.py  client_routes.py  email_ab_test_routes.py  email_tracking_routes.py  email_verification_routes.py  file_routes.py  gdpr_routes.py  health_routes.py  mfa_routes.py  oauth_routes.py  passwordless_routes.py  permission_routes.py  profile_routes.py  serve_files_routes.py  session_routes.py  sse_routes.py  sso_routes.py  task_routes.py  user_client_access_routes.py  webauthn_routes.py  websocket_routes.py  workspace_client_routes.py  workspace_leave_routes.py  workspace_member_routes.py  workspace_routes.py
auth-backend/app/api/utils/: __init__.py  cache_headers.py  client_detection.py  deprecation.py  file_validator.py  pagination.py
auth-backend/app/api/websockets/: __init__.py  (+1 more)
auth-backend/config/: __init__.py  logging_config.py  oauth_config.py  settings.py
auth-backend/core/: exceptions.py
auth-backend/core/decorators/: __init__.py  audit_decorator.py
auth-backend/core/domain/: __init__.py
auth-backend/core/interfaces/: __init__.py
auth-backend/core/utils/: __init__.py  change_detector.py  compression.py  url_validator.py
auth-backend/docs/: AUTHENTICATION.md  COMPLETE_IMPLEMENTATION.md  FINAL_STATUS.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_GUIDE.md  QUICK_START.md  README.md
auth-backend/infra/audit/: __init__.py  async_audit_logger.py  audit_repository_factory.py
auth-backend/infra/celery/: __init__.py  celery_app.py
auth-backend/infra/config/: __init__.py  settings_provider.py
auth-backend/infra/database/: __init__.py  database.py
auth-backend/infra/elasticsearch/: __init__.py  elasticsearch_audit_repository.py
auth-backend/infra/email/: __init__.py  email_service.py
auth-backend/infra/redis/: __init__.py  cache_service.py  redis_client.py  redis_pubsub.py
auth-backend/infra/storage/: __init__.py  audio_processor.py  azure_storage.py  cdn_storage.py  cloudflare_images_storage.py  cloudinary_storage.py  gcs_storage.py  image_processor.py  local_storage.py  s3_storage.py  storage_factory.py  video_processor.py
auth-backend/scripts/: README.md  alembic_helper.sh  celery_worker.sh  dev.sh  down.sh  entrypoint.sh  logs.sh  manage_partitions.py  monitor.sh  prod.sh  security-check.sh  staging.sh
auth-backend/templates/emails/: base.html  email_verification.html  login_notification.html  password_reset.html  welcome.html
auth-backend/tests/: conftest.py  factories.py
auth-backend/tests/e2e/: __init__.py  test_admin_management_journey.py  test_complete_auth_journey.py  test_complete_workspace_flow.py  test_file_upload_journey.py  test_multi_workspace_complete_journey.py  test_oauth_sso_journey.py  test_permission_journey.py  test_profile_management_journey.py  test_registration_login_journey.py  test_workspace_journey.py
auth-backend/tests/factories/: __init__.py  api_key_factory.py  backup_code_factory.py  client_factory.py  permission_factory.py  user_factory.py  workspace_factory.py
auth-backend/tests/integration/: test_api_key_routes.py  test_audit_routes.py  test_auth_security.py  test_avatar_upload.py  test_chunked_upload_api.py  test_client_routes.py  test_email_ab_test_routes.py  test_email_tracking.py  test_email_verification_routes.py  test_email_webhooks.py  test_file_upload_api.py  test_gdpr_routes.py  test_health_routes.py  test_mfa_routes.py  test_oauth_routes.py  test_password_reset_routes.py  test_passwordless_routes.py  test_permissions_api.py  test_profile_api.py  test_security_compliance.py  test_serve_files_routes.py  test_session_routes.py  test_sse_routes.py  test_sso_routes.py  test_task_routes.py  test_webauthn_routes.py  test_websocket_routes.py  test_workspace_repository.py
auth-backend/tests/performance/: test_auth_performance.py
auth-backend/tests/repositories/: __init__.py  test_permission_repository.py
auth-backend/tests/unit/: test_api_key_service.py  test_auth_service.py  test_email_tasks.py  test_email_verification_service.py  test_error_handling.py  test_login_notification_service.py  test_passwordless_service.py  test_permission_service.py
(+523 files in other folders)
