[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auth-backend"
version = "1.0.0"
description = "Multi-tenant Authentication and Authorization System"
requires-python = ">=3.12"
authors = [
    {name = "Auth System Team", email = "support@example.com"}
]

# ============================================================================
# BLACK - Code Formatter
# ============================================================================
[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | __pycache__
  | \.pytest_cache
  | \.mypy_cache
  | \.ruff_cache
  | build
  | dist
  | alembic/versions
  | migrations
)/
'''

# ============================================================================
# RUFF - Fast Python Linter (replaces flake8, isort, pyupgrade, etc.)
# ============================================================================
[tool.ruff]
line-length = 100
target-version = "py312"

# Exclude directories
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    ".pytest_cache",
    ".mypy_cache",
    ".ruff_cache",
    "build",
    "dist",
    "alembic/versions",
]

[tool.ruff.lint]
# Enable rule categories
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort (import sorting)
    "N",     # pep8-naming
    "UP",    # pyupgrade (modernize Python code)
    "B",     # flake8-bugbear (find bugs and design problems)
    "C4",    # flake8-comprehensions (better list/dict comprehensions)
    "SIM",   # flake8-simplify (simplify code)
    "TCH",   # flake8-type-checking (type checking imports)
    "PTH",   # flake8-use-pathlib (use pathlib instead of os.path)
    "RUF",   # Ruff-specific rules
]

# Ignore specific rules
ignore = [
    "E501",   # Line too long (handled by Black)
    "B008",   # Do not perform function calls in argument defaults (FastAPI Depends)
    "UP007",  # Use X | Y for type annotations (not supported in all Python versions)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]  # Allow unused imports in __init__.py
"tests/**/*.py" = ["S101"]         # Allow assert in tests
"alembic/versions/*.py" = ["E501", "F401"]  # Ignore in migrations

[tool.ruff.lint.isort]
# isort configuration (integrated in Ruff)
force-single-line = false
force-sort-within-sections = false
lines-after-imports = 2
known-first-party = ["core", "app", "config", "infra"]
known-third-party = ["fastapi", "pydantic", "sqlalchemy"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

# ============================================================================
# ISORT - Import Sorter (standalone config for backward compatibility)
# ============================================================================
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true
known_first_party = ["core", "app", "config", "infra"]
known_third_party = ["fastapi", "pydantic", "sqlalchemy"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

# ============================================================================
# MYPY - Static Type Checker
# ============================================================================
[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Gradual typing - don't enforce everywhere yet
disallow_any_generics = false
check_untyped_defs = true
no_implicit_reexport = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
strict_optional = true

# Show error codes
show_error_codes = true
show_column_numbers = true
show_error_context = true

# Exclude directories
exclude = [
    'venv/',
    '.venv/',
    'alembic/versions/',
    '__pycache__/',
]

# Per-module overrides
[[tool.mypy.overrides]]
module = "sqlalchemy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "alembic.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "celery.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "redis.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "slowapi.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "authlib.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pyotp.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "webauthn.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "user_agents.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "aiosmtplib.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "sendgrid.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "boto3.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "botocore.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "clamd.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "azure.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "google.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "cloudinary.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "sse_starlette.*"
ignore_missing_imports = true

# ============================================================================
# PYTEST - Testing Configuration
# ============================================================================
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "slow: Slow tests",
]

# ============================================================================
# COVERAGE - Code Coverage
# ============================================================================
[tool.coverage.run]
source = ["core", "app", "config", "infra"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
    "*/alembic/versions/*",
]
branch = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "@abstract",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

# ============================================================================
# BANDIT - Security Linter
# ============================================================================
[tool.bandit]
exclude_dirs = ["/tests", "/.venv", "/venv", "/alembic/versions"]
skips = ["B101"]  # Skip assert_used (we use assert in tests)
